# urbanloco-benchmarking

./: .dockerignore  .gitignore  README.md  realtime_timestamp_wrapper.py
catkin_ws/src/: robot_communication
config/: lidar_simple_visualization.rviz  urbanloco_config.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
src/robot_communication/: CMakeLists.txt  package.xml
src/robot_communication/config/: communication_config.yaml  rosbag_config.yaml  rosconsole.conf  urbanloco_config_docker.yaml
src/robot_communication/include/robot_communication/: camera_timestamp_rectifier.hpp  communication_manager.hpp  data_transfer_queue.hpp  hybrid_synchronizer.hpp  protocol_handler.hpp  sensor_fusion.hpp  sensor_subscriber.hpp
src/robot_communication/include/robot_communication/utils/: circular_buffer.hpp  thread_pool.hpp
src/robot_communication/launch/: simple_test.launch
src/robot_communication/msg/: SensorPacket.msg
src/robot_communication/proto/: sensor_data.proto
src/robot_communication/src/: camera_timestamp_rectifier.cpp  communication_manager.cpp  data_transfer_queue.cpp  hybrid_synchronizer.cpp  protocol_handler.cpp  sensor_fusion.cpp  sensor_subscriber.cpp
src/robot_communication/src/nodes/: mission_server.cpp  robot_data_publisher.cpp
src/robot_communication/src/utils/: thread_pool.cpp
src/robot_communication/srv/: ConfigUpdate.srv
src/robot_communication/tests/unit_tests/: test_basic_functionality.cpp  test_communication_manager.cpp  test_data_transfer_queue.cpp  test_minimal_functionality.cpp  test_protocol_handler.cpp  test_sensor_subscriber.cpp
