<?xml version="1.0"?>
<package format="2">
  <name>robot_communication</name>
  <version>1.0.0</version>
  <description>High-performance robot-to-server communication system using ROS1</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <build_depend>libboost-all-dev</build_depend>
  <build_depend>liblz4-dev</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>protobuf-dev</exec_depend>
  <exec_depend>libboost-all-dev</exec_depend>
  <exec_depend>liblz4-dev</exec_depend>

  <export>
  </export>
</package>